--- a/Java/GitTestApp/.settings/org.eclipse.wst.common.component
+++ b/Java/GitTestApp/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="GitWebApp">
+    <wb-module deploy-name="GitTestApp">
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <property name="context-root" value="GitWebApp"/>
-        <property name="java-output-path" value="/GitWebApp/build/classes"/>
+        <property name="context-root" value="GitTestApp"/>
+        <property name="java-output-path" value="/GitTestApp/build/classes"/>
     </wb-module>
 </project-modules>
